<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Logout"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="Name: " />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="Email: " />

        <TextView
            android:id="@+id/profile_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Address: "
            app:drawableEndCompat="@drawable/right_arrow"/>

        <TextView
            android:id="@+id/friend_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Friends"
            app:drawableEndCompat="@drawable/right_arrow" />

    </LinearLayout>



</FrameLayout>