<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp"
    tools:context=".fragments.RoutesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/route_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Routes"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:layout_weight="1"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="#E9EBF0">

            <Button
                android:id="@+id/previous_day_route"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Back"
                android:backgroundTint="#637BC4"
                />

            <TextView
                android:id="@+id/current_day_text_route"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Day"
                android:textSize="20sp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:layout_weight="2.5" />

            <Button
                android:id="@+id/next_day_route"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Next"
                android:backgroundTint="#637BC4"
                />
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/routes_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

</FrameLayout>