...
    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_pager"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
...
            android:icon="@drawable/baseline_route_24"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profile_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:icon="@drawable/baseline_person_24"/>
    </com.google.android.material.tabs.TabLayout>

</RelativeLayout>
